# KtConvertor

./: .gitignore  README.md  main.py  pyinstaller.md  pyproject.toml
docs/: Kirbi_vs_CCache.md
src/: main.py
src/ktconvertor/: convertor.py  gen_tgt_cache.py  get_tgt.py  get_tgt_raw.py  kirbi2ccache.py  main.py  tmp.py
tests/: config.py  test_convertor.py  test_genCachePath.py  test_get_tgt.py  test_kirbi2ccache.py
tests/tmp/: tgt.kirbi
